--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,12 @@
 RewriteEngine On # Turn on the rewriting engine
 RewriteRule ^ponsel/?$ ponsel.php [NC,L]
-RewriteRule ^ponsel/([0-9]+)$ ponsel.php?id=$1 [L] 
+RewriteRule ^ponsel/([0-9]+)$ ponsel.php?prdctid=$1 [L] 
+RewriteRule ^processor/?$ getprocessor.php [NC,L]
+RewriteRule ^adm/ponsel/?$ adm_ponsel.php [NC,L]
+RewriteRule ^adm/ponsel/([0-9]+)$ adm_ponsel.php?prdctid=$1 [L] 
+RewriteRule ^adm/ponsel/storeid/([0-9]+)$ adm_ponsel.php?storeid=$1 [L] 
 RewriteRule ^register/?$ register.php [NC,L]
 RewriteRule ^login/?$ login.php [NC,L]
 RewriteRule ^logout/?$ logout.php [NC,L]
 RewriteRule ^perhitungan/?$ perhitungan.php [L] 
+RewriteRule ^photo-upload/?$ photo-upload.php [L] 
